# playwright-auto-register

./: AGENTS.md  CF-BYPASS-REPORT.md  README-auto-register.md  auto-register-test.js  opencode.json  package-lock.json  package.json  test-puppeteer-stealth.js
.opencode/: oh-my-opencode.jsonc
.sisyphus/: ralph-loop.local.md
.sisyphus/plans/: playwright-auto-register.md
iFlowPanel/: skills-lock.json
iFlowPanel/iflow-dashboard/: pyproject.toml  start.sh
iFlowPanel/iflow-dashboard/src/iflow_dashboard/: __init__.py  __main__.py  app.py  config.py
iFlowPanel/iflow-dashboard/src/iflow_dashboard/core/: __init__.py  monitor.py  state.py
iFlowPanel/iflow-dashboard/src/iflow_dashboard/widgets/: __init__.py  cli_pane.py  sidebar.py  status_bar.py
iFlowPanel/skills/: agent-management  agent-messaging  cf-crawl  commit-smart  deadline-prep  eval-driven-dev  footballbin-predictions  gmod-addon-maker  graph-query  manifest  oo-component-documentation  planning  pocketbase-api-rules  pocketbase-collections  pocketbase-deploy  pocketbase-hooks  pocketbase-sdk  skill-authoring  test-detect  unit-test-vue-pinia
occ/.opencode/: oh-my-opencode.jsonc
