[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "iflow-dashboard"
version = "0.1.0"
description = "TUI Dashboard for iFlow CLI with embedded terminal and status panel"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.47.0",
    "watchdog>=4.0.0",
]

[project.scripts]
iflow-dashboard = "iflow_dashboard.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/iflow_dashboard"]
